<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:nestedScrollingEnabled="true">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:minHeight="?attr/actionBarSize"
        android:titleTextColor="@color/colorAccent"
        android:visibility="gone"
        app:subtitle=""
        app:theme="@style/ToolbarColoredBackArrow"
        app:title="">

        <TextView
            android:id="@+id/toolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/facebooksigup"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />
    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/crdProductOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/toolbar"
        android:layout_toRightOf="@+id/toolbar"
        android:background="#66000000"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="10dp"
        card_view:contentPadding="2dp">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView4"
            android:layout_centerHorizontal="true"

            android:background="@color/white"
            android:orientation="vertical"
            android:padding="20dp">





            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_medium" />

            <View
                android:id="@+id/prdOneD1"
                android:layout_width="128dp"
                android:layout_height="1dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:background="@color/colorPrimaryDark"
                android:visibility="visible" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"


                android:drawableLeft="@drawable/ic_username"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_username"
                android:hint="@string/username_hint"

                android:inputType="text"
                android:maxLength="12"
                android:textSize="@dimen/text_size_medium"
                app:met_accentTypeface="fonts/Roboto-Light.ttf"
                app:met_baseColor="@color/colorAccent"
                app:met_clearButton="true"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelTextSize="@dimen/text_size_medium"
                app:met_iconPadding="0dp"
                app:met_maxCharacters="12"
                app:met_primaryColor="@color/colorAccent"
                app:met_textColor="@color/colorAccent"
                app:met_textColorHint="@color/colorAccent"
                app:met_typeface="fonts/Roboto-Light.ttf" />


            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_lock"
                android:hint="Email"
                android:inputType="text"
                android:maxLength="32"
                android:textSize="@dimen/text_size_medium"
                app:met_accentTypeface="fonts/Roboto-Light.ttf"

                app:met_baseColor="@color/colorAccent"
                app:met_clearButton="true"
                app:met_floatingLabel="highlight"


                app:met_floatingLabelTextSize="@dimen/text_size_medium"
                app:met_iconPadding="0dp"

                app:met_maxCharacters="4"
                app:met_primaryColor="@color/colorAccent"
                app:met_textColorHint="@color/colorAccent"
                app:met_typeface="fonts/Roboto-Light.ttf" />


            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_lock"
                android:hint="@string/pin"
                android:inputType="textPassword"
                android:maxLength="32"
                android:textSize="@dimen/text_size_medium"
                app:met_accentTypeface="fonts/Roboto-Light.ttf"

                app:met_baseColor="@color/colorAccent"
                app:met_clearButton="true"
                app:met_floatingLabel="highlight"


                app:met_floatingLabelTextSize="@dimen/text_size_medium"
                app:met_iconPadding="0dp"

                app:met_maxCharacters="4"
                app:met_primaryColor="@color/colorAccent"
                app:met_textColorHint="@color/colorAccent"
                app:met_typeface="fonts/Roboto-Light.ttf" />

            <Button
                android:id="@+id/btLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/signup"
                android:textColor="@color/white" />


        </LinearLayout>
    </android.support.v7.widget.CardView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:max="100"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:gravity="center_horizontal"
            android:text="@string/powered_by_fb"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_small" />
    </LinearLayout>


</RelativeLayout>
